--- a/public/index.html
+++ b/public/index.html
@@ -221,7 +221,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Philippines Cyber Alliance - XYNN</h1>
+        <h1>Philippines Cyber Alliance - SHARP</h1>
         <div class="subtitle">PRECISELY PINPOINT SOMEONE'S LOCATION THROUGH THE ART OF SOCIAL ENGINEERING</div>
         
         <div id="tracking-status" style="margin-top: 10px; font-size: 14px;"></div>
